--- a/module3-document-classification/LS_DS_413_Document_Classification_Assignment.ipynb
+++ b/module3-document-classification/LS_DS_413_Document_Classification_Assignment.ipynb
@@ -824,6 +824,46 @@
     "    - This [text classification documentation](https://developers.google.com/machine-learning/guides/text-classification/step-2-5) from Google might be of interest\n",
     "    - Neural Networks are becoming more popular for document classification. Why is that the case?"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Sentiment Analysis** is the use of natural language processing, text analysis, computational linguistics, and biometrics to systematically identify, extract, quantify, and study affective states and subjective information."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Document classification studies the face value of the works while sentiment analysis gives you insight to the emotion/meaning behind the words"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Define clear rules for the qualifications of the categories. Be consistent. Test randomness. Expriment to get the best results.\n",
+    "Sentiment is relative, so labeling should be done by someone with a deep knowledge of the problem at hand."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Common applications of sentiment analysis include \n",
+    "* Social Media Monitoring\n",
+    "* Customer Feedback Analysis\n",
+    "* Competitor Analysis\n",
+    "* Brand Sentiment Analysis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Neural Networks are effecient for high dimensionality."
+   ]
   }
  ],
  "metadata": {
